# guillotine

./: .gitignore  .ignore  README.md  pyproject.toml
docs/: references.bib  report.typst  slides.typst
guillotine/: cli.py  corpus.py  eval.py  graph.py  llm.py  solver.py
tools/: idiom_tune.py  mwe_edges.py
